--- a/index.html
+++ b/index.html
@@ -10,32 +10,61 @@
     <title>Apple Clone</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div><a href="#"><i class="fab fa-apple"></i></a></div>
-            <div><a href="#">Store</a></div>
-            <div><a href="#">Mac</a></div>
-            <div><a href="#">iPod</a></div>
-            <div><a href="#">iPhone</a></div>
-            <div><a href="#">iPad</a></div>
-            <div><a href="#">iTunes</a></div>
-            <div><a href="#">Support</a></div>
-            <div>
-                <form>
-                    <button type="submit"><i class="fas fa-search"></i></button>
-                    <input type="text"/>
-                </form>
-            </div>
-        </nav>
 
-        <div class="header-text">
-            <h1>What will your verse be?</h1>
-            <h2>Everyone has something to share. See hoe people are using <br> iPad in their unique ways to add to the
-                world's
-                story</h2>
-            <h3>Watch the "Your verse" film and explore the stories <i class="far fa-play-circle"></i></h3>
-        </div>
-    </header>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <div><a href="#"><i class="fab fa-apple"></i></a></div>
+                <div><a href="#">Store</a></div>
+                <div><a href="#">Mac</a></div>
+                <div><a href="#">iPod</a></div>
+                <div><a href="#">iPhone</a></div>
+                <div><a href="#">iPad</a></div>
+                <div><a href="#">iTunes</a></div>
+                <div><a href="#">Support</a></div>
+                <div>
+                    <form>
+                        <button type="submit"><i class="fas fa-search"></i></button>
+                        <input type="text"/>
+                    </form>
+                </div>
+            </nav>
+
+            <div class="header-text">
+                <h1>What will your verse be?</h1>
+                <h2>Everyone has something to share. See hoe people are using <br> iPad in their unique ways to add to the
+                    world's
+                    story</h2>
+                <h3>Watch the "Your verse" film and explore the stories <i class="far fa-play-circle"></i></h3>
+            </div>
+        </header>
+        <main>
+            <div class="product-grid">
+                <a href="#" class="fives"></a>
+                <a href="#" class="fivec"></a>
+                <a href="#" class="mac"></a>
+                <a href="#" class="supplier"></a>
+            </div>
+        </main>
+        <footer>
+            <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.<br>
+                Copyright © 2014 Apple Inc. All rights reserved.
+                <a href="#">Terms of Use</a> <a href="#">Privacy Policy</a>
+            </p>
+            <ul>
+                <li><a href="#">Site</a></li>
+                <li><a href="#">Map</a></li>
+                <li><a href="#">Hot</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">RSS Feeds</a></li>
+                <li><a href="#">Media Info</a></li>
+                <li><a href="#">Environment</a></li>
+                <li><a href="#">Job Opportunities</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png" alt="Select your language"/></li>
+            </ul>
+        </footer>
+    </div>
     <script src="https://kit.fontawesome.com/58ae6287d2.js" crossorigin="anonymous"></script>
 </body>
 </html>
